2007-11-03  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/player.cpp, src/player.h, src/gui/char_select.cpp: Factored code.
	* src/net/beinghandler.cpp, src/net/charserverhandler.cpp: Fixed double
	load of hair graphics.
	* src/Makefile.am, src/resources/dye.cpp, src/resources/dye.h: Added
	palette holder and linear interpolator of colors.
	* src/resources/image.h, src/resources/image.cpp: Added palette-based
	recoloring of images.
	* src/resources/resourcemanager.h, src/resources/resourcemanager.cpp:
	Added automatic recoloring of images depending on their names.
	* data/graphics/sprites/monster-scorpion.png: Flattened colors.
	* data/graphics/sprites/monster-scorpion-black.png,
	data/graphics/sprites/monster-scorpion-red.png: Removed obsolete files.
	* data/graphics/sprites/monster-scorpion.xml,
	data/graphics/sprites/monster-scorpion-black.xml,
	data/graphics/sprites/monster-scorpion-red.xml: Added automatic
	recoloring of scorpions.

2007-10-28  Matthias Hartmann  <hartmann.matthias@gmail.com>

	* po/de.po: Updated german translation.

2007-10-28  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/widgets/layout.h, src/gui/widgets/layout.cpp: Separated
	auto-resizing into two categories: "set" and "add".
	* src/gui/sell.cpp, src/gui/inventorywindow.cpp, src/gui/buy.cpp:
	Removed useless code. Updated constant names.
	* src/gui/trade.cpp, src/gui/trade.h: Converted to layout handler.
	Fixed money handling. Fixed transaction handling.
	* src/net/tradehandler.cpp, src/net/gameserver/player.h,
	src/net/gameserver/player.cpp: Implemented missing trade messages.
	* po/POTFILES.in: Marked trade window as translatable.
	* po/tmw.pot, po/*.po: Updated translation objects.
	* po/fr.po: Updated French translation.

2007-10-28  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/debugwindow.cpp, tmw.cbp: Fixed coordinates in the debug
	window and updated project file.

2007-10-28  Philipp Sehmisch  <tmw@crushnet.org>
